[package]
name = "modulon"
version = "0.1.0"
authors = ["Sam Harrison <epicpotatopro@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.3"

[dependencies.bitflags]
version = "0.4.0"
features = ["no_std"]

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"
